classDiagram
    class User {
        +Long id
        +String email
        +String password
        +String name
        +projectmanagement.PackUsers.Team team
        +Role role
        +List~projectmanagement.Enums.Enums.Projects~ projects
        +changePassword(String newPassword)
        +updateProfile(projectmanagement.PackUsers.UserDTO userDetails)
        +assignToProject(projectmanagement.Enums.Enums.Projects project)
        +removeFromProject(projectmanagement.Enums.Enums.Projects project)
        +hasRole(Role role)
    }

    class projectmanagement.PackUsers.Team {
        +Long id
        +String name
        +User supervisor
        +List~User~ members
        +addMember(User user)
        +removeMember(User user)
        +getSupervisor()
        +listMembers()
    }

    class projectmanagement.Enums.Enums.Projects {
        +Long id
        +String name
        +String description
        +ProjectStatus status
        +User projectLead
        +List~User~ assignedUsers
        +LocalDate dueDate
        +ProjectImportance importance
        +List~projectmanagement.Projects.Task~ tasks
        +createTask(projectmanagement.Projects.TaskDTO taskDetails)
        +assignUsers(List~User~ users)
        +closeProject()
        +updateProjectDetails(projectmanagement.Projects.ProjectDTO projectDetails)
        +addProjectDocument(projectmanagement.Projects.Document document)
    }

    class projectmanagement.Projects.Task {
        +Long id
        +String name
        +String description
        +TaskStatus status
        +User assignee
        +User supervisor
        +LocalDate dueDate
        +TaskImportance importance
        +List~projectmanagement.Projects.TaskStep~ steps
        +submitTask(String completionNote)
        +addStep(projectmanagement.Projects.TaskStep step)
        +approveTask(boolean isApproved, String feedback)
        +updateTaskDetails(projectmanagement.Projects.TaskDTO taskDetails)
    }

    class projectmanagement.Projects.TaskStep {
        +Long id
        +String description
        +boolean completed
        +LocalDateTime completedAt
        +markCompleted(User completedBy)
        +updateDescription(String newDescription)
    }

    class projectmanagement.Projects.Schedule {
        +Long id
        +projectmanagement.Enums.Enums.Projects project
        +List~projectmanagement.Projects.ScheduleEvent~ events
        +addEvent(projectmanagement.Projects.ScheduleEvent event)
        +removeEvent(projectmanagement.Projects.ScheduleEvent event)
        +getUpcomingEvents()
        +generateProjectTimeline()
    }

    class projectmanagement.Projects.ScheduleEvent {
        +Long id
        +String description
        +LocalDateTime dateTime
        +EventType type
        +User createdBy
        +updateEventDetails(projectmanagement.Projects.ScheduleEventDTO eventDetails)
    }

    class projectmanagement.Projects.Document {
        +Long id
        +String name
        +String fileUrl
        +User uploadedBy
        +LocalDateTime uploadedAt
        +downloadDocument()
    }

    class Role {
        <<enumeration>>
        EMPLOYEE
        PROJECT_CREATOR
        PROJECT_LEAD
        DIRECT_SUPERVISOR
        SUPER_USER
        ADMIN
    }

    class ProjectStatus {
        <<enumeration>>
        PENDING
        IN_PROGRESS
        COMPLETED
        CANCELLED
    }

    class TaskStatus {
        <<enumeration>>
        TODO
        IN_PROGRESS
        UNDER_REVIEW
        COMPLETED
        REJECTED
    }

    class TaskImportance {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
        CRITICAL
    }

    class ProjectImportance {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
        STRATEGIC
    }

    User "1" -- "1" projectmanagement.PackUsers.Team : belongs to
    User "1" -- "*" projectmanagement.Enums.Enums.Projects : can create/participate
    projectmanagement.Enums.Enums.Projects "1" -- "*" projectmanagement.Projects.Task : contains
    projectmanagement.Projects.Task "1" -- "*" projectmanagement.Projects.TaskStep : divided into
    projectmanagement.Enums.Enums.Projects "1" -- "1" projectmanagement.Projects.Schedule : has
    projectmanagement.Projects.Schedule "1" -- "*" projectmanagement.Projects.ScheduleEvent : includes
    projectmanagement.Enums.Enums.Projects "1" -- "*" projectmanagement.Projects.Document : has
    User ..> Role : has
    projectmanagement.Enums.Enums.Projects ..> ProjectStatus : has
    projectmanagement.Projects.Task ..> TaskStatus : has
    projectmanagement.Projects.Task ..> TaskImportance : has
    projectmanagement.Enums.Enums.Projects ..> ProjectImportance : has